--- a/style.css
+++ b/style.css
@@ -130,3 +130,23 @@ header .footer p a{
     display: none;
     z-index: 999;
 }
+
+@media only screen and (max-width:1050px){
+    header{
+        left: -300px;
+    }
+    header .footer{
+        left: -300px;
+    }
+    #MenuBtn{
+        display: block;
+    }
+}
+
+.mobile-nav-active header{
+    left: 0;
+}
+
+.mobile-nav-active header .footer{
+    left: 0;
+}
