--- a/style.css
+++ b/style.css
@@ -9,10 +9,11 @@
 
 :root {
     --sideBGColor: #040b14;
-    --themeColor: #2077db;
+    --themeColor: #287d97;
     --iconBGColor: #4c4d53;
-    --textColor: #525252;
-    --bgColor: #F7F7F7;
+    --textColor: #999999;
+    --bgColor: #ffffff;
+    --dotColor: #bb11ad;
 }
 
 header {
@@ -196,4 +197,37 @@ main{
     font-weight: 600;
     letter-spacing: -1px;
     margin-bottom: 10px;
+    line-height: 70px;
+}
+
+#home .home-row h1 span{
+    color: var(--dotColor);
+}
+
+#home .home-row p{
+    color: whitesmoke;
+    font-size: 30px;
+    font-weight: 500;
+}
+
+#home .home-row p span{
+    border-bottom: 4px solid var(--dotColor);
+}
+
+@media only screen and (max-width: 670px){
+    #home{
+        padding: 30px;
+    }
+    #home .home-row h1{
+        font-size: 35px;
+        letter-spacing: 0px;
+        line-height: 50px;
+    }
+    #home .home-row h1 br{
+        display: none;
+    }
+    #home .home-row p{
+        font-size: 20px;
+        font-weight: 400;
+    }
 }
