--- a/style.css
+++ b/style.css
@@ -248,3 +248,45 @@ main{
     background-color: var(--themeColor);
     border-radius: 3px;
 }
+
+#about .divider ~ p{
+    color: var(--textColor);
+    font-size: 15px;
+    letter-spacing: 0.4px;
+    font-weight: 400;
+    margin-top: 15px;
+}
+
+#about .about-col{
+    display: flex;
+    gap: 20px;
+    margin-top: 25px;
+}
+
+#about .about-col .img-col{
+    flex-basis: 35%;
+    text-align: center;
+}
+
+#about .about-col .img-col img{
+    width: 100%;
+}
+
+#about .about-col .info-col{
+    flex-basis: 70%;
+}
+
+#about .about-col .info-col h2{
+    color: var(--themeColor);
+    font-weight: 700;
+    font-size: 35px;
+    letter-spacing: 0.5px;
+    margin-top: -10px;
+}
+
+#about .about-col .info-col p{
+    color: var(--textColor);
+    font-size: 15px;
+    letter-spacing: 0.5px;
+    font-style: italic;
+}
