--- a/style.css
+++ b/style.css
@@ -290,3 +290,14 @@ main{
     letter-spacing: 0.5px;
     font-style: italic;
 }
+
+#about .about-col .info-col .icon-list-col{
+    display: flex;
+    margin-top: 20px;
+    gap: 40px;
+}
+
+#about .about-col .info-col .icon-list-col .icon-list ul li{
+    list-style: none;
+    margin: 15px 0;
+}
