--- a/style.css
+++ b/style.css
@@ -313,3 +313,33 @@ main{
     font-weight: 100;
     font-size: 15px;
 }
+
+@media only screen and (max-width: 830px){
+    #about{
+        padding: 50px 10px;
+    }
+    #about .diver ~ p{
+        font-size: 14px;
+        letter-spacing: 0px;
+        text-align: justify;
+    }
+    #about .about-col{
+        flex-direction: column;
+    }
+    #about .about-col .img-col img{
+        width: 50%;
+    }
+    #about .about-col .info-col h2{
+        font-weight: 600;
+        font-size: 25px;
+        letter-spacing: 0px;
+    }
+    #about .about-col .info-col p{
+        font-size: 14px;
+        letter-spacing: 0px;
+    }
+    #about .about-col .info-col .icon-list-col{
+        flex-direction: column;
+        gap: 0;
+    }
+}
