--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ main{
     border-radius: 3px;
 }
 
-#about .divider ~ p{
+.sub-para{
     color: var(--textColor);
     font-size: 15px;
     letter-spacing: 0.4px;
@@ -341,5 +341,22 @@ main{
     #about .about-col .info-col .icon-list-col{
         flex-direction: column;
         gap: 0;
+    }
+    #about .about-col .info-col .icon-list-col .icon-list ul li{
+        margin: 10px 0;
+    }
+    #about .about-col .info-col .icon-list-col .icon-list ul li strong{
+        font-weight: 500;
+        margin-right: 0px;
+    }
+    #about .about-col .info-col .icon-list-col .icon-list ul li span{
+        font-weight: 400;
+        font-size: 13px;
+    }
+}
+
+@media only screen and (max-width: 400px){
+    #about .about-col .img-col img{
+        width: 90%;
     }
 }
