--- a/style.css
+++ b/style.css
@@ -437,3 +437,31 @@ main{
     font-size: 14px;
     font-style: italic;
 }
+
+#skill .skill-row .skill-box .skill-outter-line{
+    width: 100%;
+    height: 10px;
+    background-color: lightgray;
+    border-radius: 15px;
+}
+
+#skill .skill-row .skill-box .skill-outter-line .skill-inner-line{
+    height: 10px;
+    background-color: var(--themeColor);
+    border-radius: 20px;
+}
+
+@media only screen and (max-width: 450px){
+    #skill{
+        padding: 50px 15px;
+    }
+    #skill .skill-row{
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 10px;
+    }
+}
+
+#resume{
+    padding: 70px 30px;
+    background-color: white;
+}
