--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     --sideBGColor: #040b14;
     --themeColor: #287d97;
     --iconBGColor: #4c4d53;
-    --textColor: #606060;
+    --textColor: #444444;
     --bgColor: #ffffff;
     --underColor: #bb11ad;
 }
@@ -406,7 +406,6 @@ main{
     #fact .fact-row .fact-box strong{
         font-size: 20px;
     }
-    
     #fact .fact-row .fact-box p{
         font-weight: 400;
         font-size: 14px;
@@ -508,4 +507,114 @@ main{
     font-size: 17px;
     font-weight: 600;
     text-transform: uppercase;
+}
+
+#resume .resume-row .resume-cols .my-info p{
+    color: var(--textColor);
+    font-size: 15px;
+    font-weight: 600;
+    font-style: italic;
+    margin: 10px 0;
+}
+
+#resume .resume-row .resume-cols .my-info ul li{
+    margin: 10px 0;
+    margin-left: 20px;
+    color: var(--textColor);
+    font-size: 15px;
+    font-weight: 500;
+}
+
+#resume .resume-row .resume-cols .my-edu{
+    padding: 0 20px 10px;
+    border-left: 2px solid var(--themeColor);
+    position: relative;
+}
+
+#resume .resume-row .resume-cols .my-edu::before{
+    content: '';
+    position: absolute;
+    top: 0px;
+    left: -10px;
+    width: 15px;
+    height: 15px;
+    border-radius: 50px;
+    border: 2px solid var(--themeColor);
+    background-color: white;
+}
+
+#resume .resume-row .resume-cols .sp-box{
+    padding: 3px 22px;
+    background-color: rgb(207, 235, 241);
+    color: var(--textColor);
+    border-radius: 5px;
+    font-size: 14px;
+    font-weight: 600;
+    font-style: italic;
+    margin: 10px 0;
+    display: inline-block;
+}
+
+#resume .resume-row .resume-cols .my-edu span + p{
+    color: var(--textColor);
+    font-size: 15px;
+    font-weight: 550;
+    font-style: italic;
+    margin-bottom: 15px;
+}
+
+#resume .resume-row .resume-cols .my-edu span + p + p{
+    color: var(--textColor);
+    font-size: 15px;
+    font-weight: 550;
+    padding-bottom: 15px;
+}
+
+#resume .resume-row .resume-cols .work-exp{
+    padding: 0 20px 10px;
+    border-left: 2px solid var(--themeColor);
+    position: relative;
+}
+
+#resume .resume-row .resume-cols .work-exp::before{
+    content: '';
+    position: absolute;
+    top: 0px;
+    left: -10px;
+    width: 15px;
+    height: 15px;
+    border-radius: 50px;
+    border: 2px solid var(--themeColor);
+    background-color: white;
+}
+
+#resume .resume-row .resume-cols .work-exp p{
+    color: var(--textColor);
+    font-size: 17px;
+    font-weight: 500;
+    font-style: italic;
+}
+
+#resume .resume-row .resume-cols .work-exp ul li{
+    margin: 10px 0;
+    margin-left: 20px;
+    color: var(--textColor);
+    font-size: 15px;
+    font-weight: 500;
+}
+
+@media only screen and (max-width: 820px){
+    #resume{
+        padding: 50px 15px;
+    }
+    #resume .resume-row{
+        flex-direction: column;
+    }
+    #resume .resume-row .resume-cols{
+        flex-basis: 100%;
+    }
+}
+
+#profolio{
+    padding: 70px 30px;
 }
