--- a/style.css
+++ b/style.css
@@ -707,3 +707,33 @@ main{
         grid-gap: 15px;
     }
 }
+
+#else {
+    padding: 70px 30px;
+    background-color: white;
+}
+
+#else .else-row{
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px;
+}
+
+#else .else-row .else-box{
+    display: flex;
+    gap: 20px;
+}
+
+#else .else-row .else-box .icon i{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 2px solid var(--themeColor);
+    font-size: 22px;
+    line-height: 46px;
+    background-color: var(--themeColor);
+    color: var(--bgColor);
+    transition: 0.7s;
+    text-align: center;
+}
