--- a/finance/css/finance.css
+++ b/finance/css/finance.css
@@ -1,35 +1,107 @@
 *{
     margin: 0;
     padding: 0;
-    text-decoration: none;
-    list-style: none;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 body{
-    font-family: 'Poppins';
+    height: 100vh;
+    background-color: rgb(0, 0, 0);
+    background-image: url(/img/wallstreet.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+li{
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+    font-size: 1rem;
+}
+
+a:hover{
+    color: grey;
 }
 
 header{
-    height: 100vh;
-    width: 100vw;
-    background-image: url(/img/wallstreet.jpg);
-    background-size: cover;
+    position: relative;
+    padding: 0 2rem;
 }
 
 .navbar{
-    position: absolute;
-    margin: 50px;
+    width: 100%;
+    height: 60px;
+    max-width: 1200px;
+    margin: 0 auto;
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    width: 90%;
-    box-sizing: border-box;
 }
 
-.navbar a{
+.navbar .logo {
     color: white;
+    font-size: 1.5rem;
+    font-weight: bold;
 }
 
-.navbar .logo{
-    font-size: 2em;
-    font-weight: bold;
+.navbar .links {
+    display: flex;
+    gap: 2rem;
+}
+
+.navbar .toggle_btn{
+    color: white;
+    font-size: 1.5rem;
+    cursor: pointer;
+    display: none;
+}
+
+.dropdown-menu{
+    display: none;
+    position: absolute;
+    right: 2rem;
+    top: 60px;
+    height: 0;
+    width: 300px;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(15px);
+    border-radius: 10px;
+    overflow: hidden;
+    transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.dropdown-menu.open{
+    height: 180px;
+}
+
+.dropdown-menu li{
+    padding: 0.7rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+@media (max-width: 820px) {
+    .navbar .links{
+        display: none;
+    }
+
+    .navbar .toggle_btn{
+        display: block;
+    }
+
+    .dropdown-menu{
+        display: block;
+    }
+}
+
+@media (max-width: 600px) {
+    .dropdown-menu{
+        left: 2rem;
+        width: unset;
+    }
 }
