--- a/finance/style.css
+++ b/finance/style.css
@@ -1,6 +1,34 @@
+*{
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+}
+
+nav ul{
+    float: right;
+    margin-right: 20px;
+}
+
+nav ul li{
+    display: inline-block;
+}
+
+nav ul li a{
+    font-size: 17px;
+    padding: 5px 10px;
+    border-radius: 3px;
+    text-transform: uppercase;
+}
+
+a.active,a:hover{
+    transition: .5s;
+}
+
 .card-body{
-    flex: 1 0 15em;
-    background: rgb(58, 58, 58);
+    flex: 1 0 18em;
+    background: rgb(77, 77, 77);
 }
 
 .card-body .card-title .card-text{
@@ -9,7 +37,7 @@
 
 .card-body .card-text{
     display: -webkit-box;
-    -webkit-line-clamp: 3;
+    -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
