--- a/finance/style.css
+++ b/finance/style.css
@@ -13,6 +13,7 @@ nav ul{
 
 nav ul li{
     display: inline-block;
+    margin: 0 5px;
 }
 
 nav ul li a{
@@ -24,6 +25,14 @@ nav ul li a{
 
 a.active,a:hover{
     transition: .5s;
+}
+
+.checkbtn{
+    font-size: 30px;
+    color: white;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
 }
 
 .card-body{
@@ -41,3 +50,4 @@ a.active,a:hover{
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
+
