--- a/finance/finance.css
+++ b/finance/finance.css
@@ -80,3 +80,17 @@
 .card .btn-read:hover{
     text-decoration: underline;
 }
+
+.pagination{
+    text-align: center;
+    margin: 30px 30px 60px;
+    user-select: none;
+}
+
+.pagination li{
+    display: inline-block;
+    margin: 5px;
+    box-shadow: 0 5px 25px rgba(1, 1, 1, 0.1);
+}
+
+/* .previous-page,  */
