--- a/finance/finance.css
+++ b/finance/finance.css
@@ -3,8 +3,9 @@
     padding: 0;
     text-decoration: none;
     list-style: none;
+    transition: all 0.35s linear;
     box-sizing: border-box;
-    font-family: 'Poppins' , sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 .navbar {
@@ -35,7 +36,7 @@
     font-size: 18px;
 }
 
-.cards{
+.cards {
     margin: 0 auto;
     max-width: 1200px;
     display: grid;
@@ -44,17 +45,17 @@
     border-radius: 10px;
 }
 
-.card{
+.card {
     box-shadow: 2px 2px 10px rgba(110, 110, 110, 0.4);
 }
 
-.card .card-title ,
-.card .card-date{
+.card .card-title,
+.card .card-date {
     text-align: center;
     font-weight: 500;
 }
 
-.card .card-des{
+.card .card-des {
     line-height: 1.5;
     font-size: large;
     padding: 5px;
@@ -65,32 +66,18 @@
     overflow: hidden;
 }
 
-.btn-group{
+.btn-group {
     display: flex;
     align-items: center;
     font-size: 0.8em;
     margin-right: 8px;
 }
 
-.card .btn-read{
+.card .btn-read {
     text-decoration: none;
     color: rgb(0, 17, 255);
 }
 
-.card .btn-read:hover{
+.card .btn-read:hover {
     text-decoration: underline;
 }
-
-.pagination{
-    text-align: center;
-    margin: 30px 30px 60px;
-    user-select: none;
-}
-
-.pagination li{
-    display: inline-block;
-    margin: 5px;
-    box-shadow: 0 5px 25px rgba(1, 1, 1, 0.1);
-}
-
-/* .previous-page,  */
